# FortranDataPipeline

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  TODO.md  fdpfortConfig.cmake.in
.github/workflows/: simple_model.yml  test.yaml  test.yml  test_with_simple_model.yaml
src/: CMakeLists.txt  fdp.f90  fdp_c_utils.f90  fdpfort.f90
tests/: CMakeLists.txt  test_c_utils.c  test_c_utils.h  test_c_utils.pf  test_fdp.pf  test_fdpfort.pf
tests/data/: write_csv.yaml
